<resources>
    <string name="app_name">Come2Go</string>

    <!-- Main Page Language -->
    <string name="username">Username</string>
    <string name="pWord">Password</string>
    <string name="loginBtnTxt">Login</string>
    <string name="signUpTxt">Do Not Have an Account? Sign Up</string>
    <string name="cLTxt">Change Language</string>
    <string name="profile_test">Profile Test</string>
    <string name="dbTest">Database Test</string>
    <string name="userN_Test">Username Test</string>
    <string name="csgName">Come2Go©</string>
    <string name="orLog">or, Login</string>
    <string name="testPur">Clickable text for test purposes.</string>

    <!-- Profile View Page Language Changes-->
    <string name="upAvatar">Update Avatar</string>
    <string name="editBio">Edit Biography</string>
    <string name="bio">Biography</string>
    <string name="UpBio">Update Biography</string>
    <string name="email">Email</string>
    <string name="newPass">New Password</string>
    <string name="upPass">Update Password</string>
    <string name="uName">Username:</string>
    <string name="editUsername">Edit Username</string>
    <string name="upMail">Update Email</string>
    <string name="dispEmail">This will display the email from the database</string>
    <string name="HelloMy">Hello my name is Aaron</string>
    <string name="upPassword">Update Password:</string>
    <string name="proUser">Username goes here</string>
    <string name="proEmail">Email goes here</string>
    <string name="proBalance">Balance:</string>
    <string name="proApplications">Applications:</string>


    <!-- Sign-Up Page Language Changes -->
    <string name="chooseUname">Choose a Username</string>
    <string name="enterEmail">Enter E-mail Address</string>
    <string name="choosePass">Choose password</string>
    <string name="sUp">Sign Up</string>
    <string name="helpSt">Help</string>

    <!-- AfterMail Page Language Changes -->
    <string name="afMsg">Thank you for contacting us, a member of our team will be with you shortly to answer your query. Thank you for using Come2Go!</string>
    <string name="g2Profile">Go to Loan page</string>
    <string name="exitApp">Exit application</string>

    <!-- Help Page -->
    <string name="hpName">Name</string>
    <string name="conMail">Confirm Email</string>
    <string name="helpMsg">Please send a message or query</string>
    <string name="helpSend">Send</string>

    <!-- Listings Page -->
    <string name="lPrice">Price:</string>
    <string name="lOwner">Owner:</string>
    <string name="lAddress">Address:</string>
    <string name="lDescription">Description:</string>
    <string name="lDeposit">Deposit Type:</string>
    <string name="addFav">Add to favourites.</string>
    <string name="delFav">Remove from favourites.</string>
    <string name="lisReview">Write Review</string>

    <!--  Home Page  -->
    <string name="lis">Listings</string>
    <string name="maps">Maps</string>
    <string name="loans">Loans</string>
    <string name="homeUser">Username Goes here.</string>
    <string name="hpInfo">Home Page Information Here.</string>
    <string name="hpOthInfo">Other relative information goes here.</string>
    <string name="homePageDesc">ComeToGo is a short-term rent/housing app aimed towards students who are leaving home for college/work/internships or for foreign nationals facing similar housing issues, it offers solutions to potentially unaffordable renting deposits for low-income individuals. This application is designed to help students and foreign nationals find short term accommodation in areas in and around major colleges, universities and cities as well this, it is designed so as to make the process of renting the accommodation as quick and easy as possible.</string>


    <!--  Listings -->
    <string name="homeLis">Home</string>
    <string name="lisFavourites">Favourites</string>
    <string name="apToRent">Apply to rent.</string>

    <!--  Loan Page -->
    <string name="loanHome">Home</string>
    <string name="_200Hint">€200</string>
    <string name="reqLoanAm">Request loan amount.</string>
    <string name="requestBtn">Request</string>
    <string name="update_email" translatable="false">Update Email</string>
    <string name="enter_new_email_here">Enter new email here.</string>
    <string name="loanDesc">At Come2Go, we understand the difficulties involved in organising the money necessary for moving away from home. This app offers to cover, or partially cover, the cost of a property\'s deposit for those who need it. Please make an application for a loan below.</string>
    <string name="loanRel">Other relative information goes here.</string>

    <!-- Review Page Language changes -->
    <string name="revName">Name</string>
    <string name="revLandlord">Landlord/prop</string>
    <string name="revReview">Review</string>
    <string name="revAddReview">Add Review</string>
    <string name="revView">View Reviews</string>
    <string name="revUpdate">Update Data</string>
    <string name="revID">Review ID</string>
    <string name="revDel">Delete</string>



    <!-- Map Page -->
    <string name="permission_rationale_location" translatable="false">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied" translatable="false">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast" translatable="false">Location permission is required for this demo.</string>
    <string name="mylocation_button" translatable="false">My Location Button</string>
    <string name="mylocation_layer" translatable="false">My Location Layer</string>

</resources>
