<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#595959"
    android:clickable="true"
    tools:context=".ProfilePage">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:contentDescription="Avatar"
        android:layout_marginEnd="246dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <Button
        android:id="@+id/updateAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="182dp"
        android:text="@string/upAvatar" />

    <TextView
        android:id="@+id/accountBio"
        android:layout_width="172dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="205dp"
        android:layout_marginTop="43dp"
        android:text="@string/HelloMy"
        android:textColor="#ECE1E1" />

    <Button
        android:id="@+id/updateBioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="182dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="480dp"
        android:text="@string/UpBio" />

    <TextView
        android:id="@+id/bioText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="95dp"
        android:text="@string/bio"
        android:textColor="#FDFCFC" />

    <EditText
        android:id="@+id/editBio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editBio" />

    <TextView
        android:layout_width="220sp"
        android:layout_height="45sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="575dp"
        android:textColor="#cddc39"
        android:textSize="20sp"
        android:layout_marginStart="360dp"
        android:text="@string/helpSt"
        android:id="@+id/helpTxt"
        />

    <TextView
        android:id="@+id/editUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="276dp"
        android:text="@string/proUser" />

    <TextView
        android:id="@+id/emailGoesHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="208dp"
        android:text="@string/proEmail" />


</RelativeLayout>

