<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.myapplication2.ReviewPage">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/revName"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/revLandlord"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/revReview"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etNewName"
        android:layout_alignBottom="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etNewProp"
        android:layout_above="@+id/textView3"
        android:layout_alignRight="@+id/etNewName"
        android:layout_alignEnd="@+id/etNewName"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etNewReview"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/revAddReview"
        android:id="@+id/btnAddData"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/revView"
        android:id="@+id/btnViewData"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/btnAddData"
        android:layout_toEndOf="@+id/btnAddData" />

    <Button
        android:id="@+id/btnUpdateData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etNewReview"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_toEndOf="@+id/btnViewData"
        android:layout_toRightOf="@+id/btnViewData"
        android:text="@string/revUpdate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/revID"
        android:id="@+id/textView4"
        android:layout_below="@+id/btnAddData"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etID"
        android:layout_alignTop="@+id/textView4"
        android:layout_toRightOf="@+id/textView4"
        android:layout_alignRight="@+id/btnUpdateData"
        android:layout_alignEnd="@+id/btnUpdateData"
        android:hint="Use to Update or Delete" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/revDel"
        android:id="@+id/btnDelete"
        android:layout_below="@+id/etID"
        android:layout_alignRight="@+id/etID"
        android:layout_alignEnd="@+id/etID" />

    <TextView
        android:id="@+id/helpTxt"
        android:layout_width="220sp"
        android:layout_height="45sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:text="@string/helpSt"
        android:textAlignment="center"
        android:textColor="#cddc39"
        android:textSize="20sp"
         />

</RelativeLayout>

