<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#595959">

    <TextView
        android:id="@+id/companyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="Come2Go©"
        android:textColor="#FFEB3B"
        android:textSize="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:background="#CDDC39"
        android:hint="@string/username"
        android:textAlignment="center"
        android:id="@+id/lgn"
        android:layout_centerHorizontal="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="350sp"
        android:layout_centerHorizontal="true"
        android:hint="@string/pWord"
        android:textAlignment="center"
        android:background="#CDDC39"
        android:id="@+id/pWord"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:background="#CDDC39"
        android:text="@string/loginBtnTxt"
        android:layout_width="100sp"
        android:layout_height="30sp"
        android:id="@+id/logBtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:layout_width="220sp"
        android:layout_height="45sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="440dp"
        android:textColor="#cddc39"
        android:textSize="14sp"
        android:text="@string/signUpTxt"
        android:id="@+id/signTxt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:layout_width="160sp"
        android:layout_height="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="525dp"
        android:background="#CDDC39"
        android:text="@string/cLTxt"
        android:id="@+id/changeMyLang"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/profileTestButton"
        android:layout_width="127dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#CDDC39"
        android:text="@string/profile_test"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="230dp"/>

    <Button
        android:id="@+id/databaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="183dp"
        android:text="@string/dbTest"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/usernameTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="165dp"
        android:layout_marginTop="42dp"
        android:text="@string/userN_Test"
        android:textColor="#FFFFFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/helpTxt"
        android:layout_width="220sp"
        android:layout_height="45sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="570dp"
        android:text="@string/helpSt"
        android:textAlignment="center"
        android:textColor="#cddc39"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>