<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:background="#595959"
        tools:context=".ListingsPage">

    <Button
        android:id="@+id/homePageButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="82dp"
        android:layout_marginTop="49dp"
        android:text="@string/homeLis" />

    <Button
        android:id="@+id/mapPageButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="166dp"
        android:layout_marginTop="49dp"
        android:text="@string/maps" />

    <Button
        android:id="@+id/loanPageButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="250dp"
        android:layout_marginTop="49dp"
        android:text="@string/loans" />

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <ListView
        android:id="@+id/myListView"
        android:layout_width="383dp"
        android:layout_height="470dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"></ListView>

    <ListView
        android:id="@+id/faveListView"
        android:layout_width="383dp"
        android:layout_height="470dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"></ListView>

    <ToggleButton
        android:id="@+id/faveToggle"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="74dp"
        android:paddingTop="5sp"
        android:paddingBottom="5sp"
        android:text="ToggleButton"
        android:textOff="@string/lisFavourites"
        android:textOn="@string/lisFavourites" />

    <Button
        android:id="@+id/ReviewButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="87dp"
        android:text="@string/lisReview" />

    <TextView
        android:id="@+id/helpTxt"
        android:layout_width="220sp"
        android:layout_height="45sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="570dp"
        android:text="@string/helpSt"
        android:textAlignment="center"
        android:textColor="#cddc39"
        android:textSize="20sp"
        />

</RelativeLayout>